[gd_scene load_steps=7 format=3 uid="uid://dcemrtgwt5l3i"]

[ext_resource type="PackedScene" uid="uid://b5frslx0xhpxc" path="res://modals/modal/modal.tscn" id="1_hdklq"]
[ext_resource type="Script" path="res://places/lobby/buy_menu/submenus/nanogames/specific_modal/specific_modal.gd" id="2_fratf"]
[ext_resource type="Texture2D" uid="uid://cm7bkf4nyxfyf" path="res://places/_assets/pagination/first_page.svg" id="3_a163h"]
[ext_resource type="Texture2D" uid="uid://bu7lp4s66p63a" path="res://places/_assets/pagination/previous_page.svg" id="4_v3bwy"]
[ext_resource type="Texture2D" uid="uid://d4csqaw6ukmfi" path="res://places/_assets/pagination/next_page.svg" id="5_3e5hn"]
[ext_resource type="Texture2D" uid="uid://bvbpoo82ptuei" path="res://places/_assets/pagination/last_page.svg" id="6_50t4j"]

[node name="SpecificModal" instance=ExtResource("1_hdklq")]
script = ExtResource("2_fratf")

[node name="Contents" type="VBoxContainer" parent="." index="2"]
offset_left = 4.0
offset_top = 4.0
offset_right = 844.0
offset_bottom = 569.0

[node name="Search" type="LineEdit" parent="Contents" index="0"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Search"
context_menu_enabled = false
clear_button_enabled = true
caret_blink = true

[node name="Panel" type="Panel" parent="Contents" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="NanogameList" type="VBoxContainer" parent="Contents/Panel" index="0"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmptyMessage" type="Label" parent="Contents/Panel" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No nanogames found."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageButtons" type="HBoxContainer" parent="Contents" index="2"]
layout_mode = 2
alignment = 1

[node name="First" type="Button" parent="Contents/PageButtons" index="0"]
layout_mode = 2
icon = ExtResource("3_a163h")

[node name="Previous" type="Button" parent="Contents/PageButtons" index="1"]
layout_mode = 2
icon = ExtResource("4_v3bwy")

[node name="Pages" type="Label" parent="Contents/PageButtons" index="2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Next" type="Button" parent="Contents/PageButtons" index="3"]
layout_mode = 2
icon = ExtResource("5_3e5hn")

[node name="Last" type="Button" parent="Contents/PageButtons" index="4"]
layout_mode = 2
icon = ExtResource("6_50t4j")

[connection signal="text_changed" from="Contents/Search" to="." method="_update_filtered_nanogames" flags=3 unbinds=1]
[connection signal="pressed" from="Contents/PageButtons/First" to="." method="_on_first_pressed"]
[connection signal="pressed" from="Contents/PageButtons/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Contents/PageButtons/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Contents/PageButtons/Last" to="." method="_on_last_pressed"]
